# Consultaion

./: .coderabbit.yaml  .coverage.kali.11295.XmBsAxFx  .env.example  .gitignore  .graphifyignore  .hermes.md  .pre-commit-config.yaml  BACKEND_REVIEW_CHECKLIST.md  BACKEND_REVIEW_FINDINGS.md  BACKEND_REVIEW_SUMMARY.md  CHANGELOG.md  CI_CD_SETUP.md  CONTRIBUTING.md  DESIGN_IMPROVEMENTS.md  FINAL_HARDENING_SUMMARY.md  FRONTEND_CODE_QUALITY_REVIEW.md  IMPLEMENTATION_PLAN.md  IMPROVEMENTS_SUMMARY.md  IMPROVEMENT_PLAN.md  LICENSE  MEMORY.md  Makefile  PATCHSET_138_REPORT.md  PRIVACY.md  README.md  REVIEW.md  RULES.MD  SECURITY.md  TERMS.md  WALKTHROUGH.md  coverage.xml  docker-compose.smoke.yml  mypy.ini  opencode.json  package-lock.json  package.json  playwright.config.ts  refactor.cjs  ruff.toml  test_arena.py  (+2 more)
.abacusai/: config.json
.github/: dependabot.yml  pull_request_template.md
clients/python/: README.md  pyproject.toml
clients/python/consultaion/: __init__.py  client.py  types.py
clients/python/examples/: basic.py
docs/: API.md  API_ACCESS.md  ARCHITECTURE.md  DEBATE_PIPELINE.md  DOMAINS.md  E2E_SMOKE.md  ERROR_INTAKE.md  OBSERVABILITY.md  OWNERSHIP.md  PATCHSET_112.md  PROMPT_GUARDRAILS.md  QUICK_DEPLOY.md  REVIEW_COMPREHENSIVE.md  RUNBOOKS.md  SELF_HEALING.md  STATE.md  THEME_MIGRATION.md  analytics-events.md  defensibility.md  enterprise-readiness.md  frontend-api-client.md  growth-free-trial.md  hosted-credits.md  integrations.md  investor-metrics.md  investor-positioning.md  manual-qa-core-flows.md  model-gateway-keys.md  model_gateway.md  openapi.json  (+18 more)
(+957 files in other folders)
